--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ install:
   - conda install --quiet --file requirements.txt
   - conda list
   - conda info -a
+  - wget https://github.com/marqh/terra/archive/master.zip
+  - unzip terra-master.zip
+  - cd terra-master
+  - python setup.py --quiet install
+  - cd ..
   - python setup.py --quiet install
 
 script:
