--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,38 @@
+sudo: required
+
+dist: bionic
+
 language: python
-python:
-  - "3.5"
+  - "3.6"
 install:
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-  - bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-
-  - conda config --add channels conda-forge
-  - conda config --add channels bioconda
-  - conda config --set always_yes yes --set changeps1 no
-  - conda config --set show_channel_urls True
-
-  - ENV_NAME='testing'
-  - conda create --quiet -n $ENV_NAME python=$TRAVIS_PYTHON_VERSION
-  - source activate $ENV_NAME
-  - conda install --quiet --file requirements.txt
-  - conda list
-  - conda info -a
+  - sudo apt-get install python3-h5py
+  - sudo apt-get install hdf5-helpers hdf5-tools
+  - sudo apt-get install libhdf5-dev
+  - dpkg -L libhdf5-dev
+  - sudo apt-get install python3-requests
+  - sudo apt-cache search netcdf
+  - sudo apt-get install libnetcdf-dev
+  - sudo apt-get install netcdf-bin
+  - sudo apt-get install python3-jinja2
+  - sudo apt-get install python3-six
+  - sudo apt-get install python3-pip
+  - sudo pip3 install setuptools --upgrade
+  - sudo pip3 install pyparsing
+  - sudo pip3 install rdflib
+  - export HDF5_DIR=/usr/include/hdf5
+  - export USE_SETUPCFG=0
+  - export HDF5_INCDIR=/usr/include
+  - export HDF5_LIBDIR=/usr/lib/x86_64-linux-gnu
+  - sudo pip3 install netCDF4
   - wget https://github.com/marqh/terra/archive/master.zip
   - unzip master.zip
   - cd terra-master
-  - python setup.py --quiet install
+  - sudo python3 setup.py --quiet install
   - cd ..
-  - python setup.py --quiet install
+  - sudo python3 setup.py --quiet install
+  - python3 -c 'import bald; print(bald); print(bald.__version__)'
+  - which python3
+  - python3 -c 'import numpy; print('numpy: ' + numpy.__version__); import netCDF4; print('netCDF4: ' + netCDF4.__version__)'
 
 script:
-  python -m unittest discover -s bald.tests -v
+  python3 -m unittest discover -s bald.tests -v
