--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ install:
   - sudo python3 setup.py --quiet install
   - python3 -c 'import bald; print(bald); print(bald.__version__)'
   - which python3
-  - python3 -c "import numpy; print('numpy: ' + numpy.__version__); import netCDF4; print('netCDF4: ' + netCDF4.__version__); print('###')"
-
+  - python3 -c 'import numpy; print(numpy); print(numpy.__version__)'
+  - python3 -c 'import netCDF4; print(netCDF4); print(netCDF4.__version__)'
 
 script:
   python3 -m unittest discover -s bald.tests -v
